[benchmark] refactor cdp runtime benchmark and reporting
